fixed the ajax request? maybe

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <script>
-    $.ajax({
+    jQuery.ajax({
       url: 'https://www.codeschool.com/users/kadogamer',
       dataType: 'jsonp',
       success: function(response) {
